@@ -6,6 +6,9 @@ v0.8.1 (??.10.2010)
  * New hook in merge profiles
  * #46: Remove profiles from team
  * #47: It is possible to calculate end result from results of match parts.
+ * Some new fields for clubs
+ * #19: New BE form to manually create matches
+ * #19: New team mode to edit matches in BE
 
 v0.8.0 (21.10.2010)
  * BE module refactoring
